--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@
 
 quarkus.http.port = 9090
 
+quarkus.tls.trust-all=true
+quarkus.http.test-port=8888
+
 quarkus.operator-sdk.crd.generate=false
 
 
