--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 		<dependency>
 			<groupId>one.util</groupId>
 			<artifactId>streamex</artifactId>
+			<version>0.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
