--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-%dev.quarkus.log.level=TRACE
-%dev.quarkus.log.console.level=TRACE
-%dev.quarkus.log.console.color=false
-%dev.quarkus.log.min-level=TRACE
+quarkus.log.level=TRACE
+quarkus.log.console.level=TRACE
+quarkus.log.console.color=false
+quarkus.log.min-level=TRACE
 
 quarkus.http.port = 9090
 
