--- a/src/main/kubernetes/kubernetes.yml
+++ b/src/main/kubernetes/kubernetes.yml
@@ -14,6 +14,12 @@ rules:
   - apiGroups:
       - networking.k8s.io
     resources:
+      - ingresses/status
+    verbs:
+      - update
+  - apiGroups:
+      - networking.k8s.io
+    resources:
       - ingresses
       - ingressclasses
     verbs:
