--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<quarkus.platform.version>2.6.1.Final</quarkus.platform.version>
 		<quarkus-operator-sdk.version>2.0.2</quarkus-operator-sdk.version>
 		<operator-framework-core.version>1.10.1</operator-framework-core.version>
-		<kubernetes-client.version>5.11.0</kubernetes-client.version>
-		<mapstruct.version>1.5.0.Beta1</mapstruct.version>
+		<kubernetes-client.version>5.11.2</kubernetes-client.version>
+		<mapstruct.version>1.5.0.Beta2</mapstruct.version>
 		<truth.version>1.1.3</truth.version>
 		<streamex.version>0.8.1</streamex.version>
 	</properties>
@@ -67,7 +67,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.fabric8</groupId>
-			<artifactId>istio-client</artifactId>
+			<artifactId>istio-model-v1beta1</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.enterprise</groupId>
