Process cert-manager annotations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
-quarkus.log.level=TRACE
-quarkus.log.console.level=TRACE
-quarkus.log.console.color=false
-quarkus.log.min-level=TRACE
+quarkus.log.min-level=ALL
+quarkus.log.level=INFO
+quarkus.log.console.level=ALL
+quarkus.log.console.color=true
+quarkus.log.category."org.jresearch".level=ALL
 
 quarkus.http.port = 9090
 
