--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 
-quarkus.log.min-level=ALL
-quarkus.log.level=INFO
-quarkus.log.console.level=ALL
-quarkus.log.console.color=true
-quarkus.log.category."org.jresearch".level=ALL
+quarkus.log.min-level=TRACE
+quarkus.log.level=WARN
+quarkus.log.console.level=TRACE
+quarkus.log.console.color=false
+quarkus.log.category."org.jresearch".level=TRACE
+quarkus.log.category."io.javaoperatorsdk".level=DEBUG
 
-quarkus.http.port = 9090
 
 quarkus.tls.trust-all=true
 quarkus.http.test-port=8888
 
 quarkus.operator-sdk.crd.generate=false
+quarkus.kubernetes.namespace = istio-system
+
 
 
 
